--- a/index.html
+++ b/index.html
@@ -6,6 +6,47 @@
         <script src="./js/index.js"></script>
     </head>
     <body>
-        <header class="header"></header>
+        <header class="header">
+            <div class="header__wrapper">
+                <div class="header__logo">
+                    <a href="#">
+                        <img src="./img/logo.svg" alt="" />
+                    </a>
+                </div>
+                <div class="header__hambarger">
+                    <div class="header__hambarger_line"></div>
+                    <div class="header__hambarger_line"></div>
+                    <div class="header__hambarger_line"></div>
+                </div>
+            </div>
+            <div class="layer"></div>
+            <div class="left_menu">
+                <nav>
+                    <ul class="left_menu__section">
+                        <li>
+                            <a href="#pickup">PICK UP</a>
+                        </li>
+                        <li>
+                            <a href="#feature">FEATURE</a>
+                        </li>
+                        <li>
+                            <a href="#contact">CONTACT</a>
+                        </li>
+                    </ul>
+                    <ul class="left_menu__sns">
+                        <li>
+                            <a href="https://twitter.com">Twitter</a>
+                        </li>
+                        <li>
+                            <a href="https://www.facebook.com/">facebook</a>
+                        </li>
+                        <li>
+                            <a href="https://www.instagram.com/">instagram</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+        <main style="height: 2000px; background-color: red;">aaa</main>
     </body>
 </html>
