--- a/index.html
+++ b/index.html
@@ -47,6 +47,13 @@
                 </nav>
             </div>
         </header>
-        <main style="height: 2000px; background-color: red;">aaa</main>
+        <main>
+            <div id="main_video">
+                <video autoplay muted loop playsinline>
+                    <source src="video/Loom _ Free Screen & Video Recording Software _ Loom - 4 May 2024.mp4" type="video/mp4"/>
+                </video>
+            </div>
+        </main>
+        <!-- <footer style="height: 2000px; background-color: red;">aaa</footer> -->
     </body>
 </html>
