--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="./css/destyle.css" />
         <link rel="stylesheet" href="./css/index.min.css" />
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+        <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
         <script src="./js/index.js"></script>
+        <script src="./js/swiper.js" type="module"></script>
     </head>
     <body>
         <header class="header">
@@ -53,6 +56,40 @@
                     <source src="video/Loom _ Free Screen & Video Recording Software _ Loom - 4 May 2024.mp4" type="video/mp4"/>
                 </video>
             </div>
+            <section id="pickup" class="pickup">
+                <h2 class="pickup__title">PICK UP</h2>
+                <div class="swiper pickup__swiper">
+                    <ul class="swiper-wrapper">
+                        <li class="swiper-slide">
+                            <img src="img/pickup1.jpg" alt="" />
+                        </li>
+                        <li class="swiper-slide">
+                            <img src="img/pickup2.jpg" alt="" />
+                        </li>
+                        <li class="swiper-slide">
+                            <img src="img/pickup3.jpg" alt="" />
+                        </li>
+                        <li class="swiper-slide">
+                            <img src="img/pickup4.jpg" alt="" />
+                        </li>
+                        <li class="swiper-slide">
+                            <img src="img/pickup5.jpg" alt="" />
+                        </li>
+                        <li class="swiper-slide">
+                            <img src="img/pickup6.jpg" alt="" />
+                        </li>
+                        <li class="swiper-slide">
+                            <img src="img/pickup7.jpg" alt="" />
+                        </li>
+                        <li class="swiper-slide">
+                            <img src="img/pickup8.jpg" alt="" />
+                        </li>
+                        <li class="swiper-slide">
+                            <img src="img/pickup9.jpg" alt="" />
+                        </li>
+                    </ul>
+                </div>
+            </section>
         </main>
         <!-- <footer style="height: 2000px; background-color: red;">aaa</footer> -->
     </body>
