--- a/index.html
+++ b/index.html
@@ -90,6 +90,101 @@
                     </ul>
                 </div>
             </section>
+            <section id="feature" class="feature">
+                <h2 class="feature__title">FEATURE</h2>
+                <div class="feature__list">
+                    <div class="feature__item">
+                        <div class="feature__item_picture">
+                            <img src="img/feature1.jpg" alt="" />
+                        </div>
+                        <div class="feature__item_content">
+                            <p class="feature__item_header">category</p>
+                            <p class="feature__item_body">テキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                            <p class="feature__item_footer">XXXX.XX.XX</p>
+                        </div>
+                    </div>
+                    <div class="feature__item">
+                        <div class="feature__item_picture">
+                            <img src="img/feature2.jpg" alt="" />
+                        </div>
+                        <div class="feature__item_content">
+                            <p class="feature__item_header">category</p>
+                            <p class="feature__item_body">テキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                            <p class="feature__item_footer">XXXX.XX.XX</p>
+                        </div>
+                    </div>
+                    <div class="feature__item">
+                        <div class="feature__item_picture">
+                            <img src="img/feature3.jpg" alt="" />
+                        </div>
+                        <div class="feature__item_content">
+                            <p class="feature__item_header">category</p>
+                            <p class="feature__item_body">テキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                            <p class="feature__item_footer">XXXX.XX.XX</p>
+                        </div>
+                    </div>
+                    <div class="feature__item">
+                        <div class="feature__item_picture">
+                            <img src="img/feature4.jpg" alt="" />
+                        </div>
+                        <div class="feature__item_content">
+                            <p class="feature__item_header">category</p>
+                            <p class="feature__item_body">テキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                            <p class="feature__item_footer">XXXX.XX.XX</p>
+                        </div>
+                    </div>
+                    <div class="feature__item">
+                        <div class="feature__item_picture">
+                            <img src="img/feature5.jpg" alt="" />
+                        </div>
+                        <div class="feature__item_content">
+                            <p class="feature__item_header">category</p>
+                            <p class="feature__item_body">テキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                            <p class="feature__item_footer">XXXX.XX.XX</p>
+                        </div>
+                    </div>
+                    <div class="feature__item">
+                        <div class="feature__item_picture">
+                            <img src="img/feature6.jpg" alt="" />
+                        </div>
+                        <div class="feature__item_content">
+                            <p class="feature__item_header">category</p>
+                            <p class="feature__item_body">テキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                            <p class="feature__item_footer">XXXX.XX.XX</p>
+                        </div>
+                    </div>
+                    <div class="feature__item">
+                        <div class="feature__item_picture">
+                            <img src="img/feature7.jpg" alt="" />
+                        </div>
+                        <div class="feature__item_content">
+                            <p class="feature__item_header">category</p>
+                            <p class="feature__item_body">テキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                            <p class="feature__item_footer">XXXX.XX.XX</p>
+                        </div>
+                    </div>
+                    <div class="feature__item">
+                        <div class="feature__item_picture">
+                            <img src="img/feature8.jpg" alt="" />
+                        </div>
+                        <div class="feature__item_content">
+                            <p class="feature__item_header">category</p>
+                            <p class="feature__item_body">テキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                            <p class="feature__item_footer">XXXX.XX.XX</p>
+                        </div>
+                    </div>
+                    <div class="feature__item">
+                        <div class="feature__item_picture">
+                            <img src="img/feature9.jpg" alt="" />
+                        </div>
+                        <div class="feature__item_content">
+                            <p class="feature__item_header">category</p>
+                            <p class="feature__item_body">テキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                            <p class="feature__item_footer">XXXX.XX.XX</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </main>
         <!-- <footer style="height: 2000px; background-color: red;">aaa</footer> -->
     </body>
