--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <h2 class="feature__title">FEATURE</h2>
                 <div class="feature__list">
                     <div class="feature__item">
-                        <div class="feature__item_picture">
+                        <div class="feature__item_picture_wrapper">
                             <img src="img/feature1.jpg" alt="" />
                         </div>
                         <div class="feature__item_content">
@@ -104,7 +104,7 @@
                         </div>
                     </div>
                     <div class="feature__item">
-                        <div class="feature__item_picture">
+                        <div class="feature__item_picture_wrapper">
                             <img src="img/feature2.jpg" alt="" />
                         </div>
                         <div class="feature__item_content">
@@ -114,7 +114,7 @@
                         </div>
                     </div>
                     <div class="feature__item">
-                        <div class="feature__item_picture">
+                        <div class="feature__item_picture_wrapper">
                             <img src="img/feature3.jpg" alt="" />
                         </div>
                         <div class="feature__item_content">
@@ -124,7 +124,7 @@
                         </div>
                     </div>
                     <div class="feature__item">
-                        <div class="feature__item_picture">
+                        <div class="feature__item_picture_wrapper">
                             <img src="img/feature4.jpg" alt="" />
                         </div>
                         <div class="feature__item_content">
@@ -134,7 +134,7 @@
                         </div>
                     </div>
                     <div class="feature__item">
-                        <div class="feature__item_picture">
+                        <div class="feature__item_picture_wrapper">
                             <img src="img/feature5.jpg" alt="" />
                         </div>
                         <div class="feature__item_content">
@@ -144,7 +144,7 @@
                         </div>
                     </div>
                     <div class="feature__item">
-                        <div class="feature__item_picture">
+                        <div class="feature__item_picture_wrapper">
                             <img src="img/feature6.jpg" alt="" />
                         </div>
                         <div class="feature__item_content">
@@ -154,7 +154,7 @@
                         </div>
                     </div>
                     <div class="feature__item">
-                        <div class="feature__item_picture">
+                        <div class="feature__item_picture_wrapper">
                             <img src="img/feature7.jpg" alt="" />
                         </div>
                         <div class="feature__item_content">
@@ -164,7 +164,7 @@
                         </div>
                     </div>
                     <div class="feature__item">
-                        <div class="feature__item_picture">
+                        <div class="feature__item_picture_wrapper">
                             <img src="img/feature8.jpg" alt="" />
                         </div>
                         <div class="feature__item_content">
@@ -174,7 +174,7 @@
                         </div>
                     </div>
                     <div class="feature__item">
-                        <div class="feature__item_picture">
+                        <div class="feature__item_picture_wrapper">
                             <img src="img/feature9.jpg" alt="" />
                         </div>
                         <div class="feature__item_content">
