なんかheaderのz-index変えたら上手くいった件

--- a/index.html
+++ b/index.html
@@ -185,6 +185,9 @@
                     </div>
                 </div>
             </section>
+            <section id="contact" class="contact">
+                
+            </section>
         </main>
         <!-- <footer style="height: 2000px; background-color: red;">aaa</footer> -->
     </body>
