--- a/index.html
+++ b/index.html
@@ -186,9 +186,41 @@
                 </div>
             </section>
             <section id="contact" class="contact">
-                
+                <h2 class="contact__title">CONTACT</h2>
+                <div class="contact__content">
+                    <div class="contact__message">
+                        <p>テキストテキストテキスト</p>
+                        <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテ キストテキストテキストテキストテキストテキストテキストテキストテキストテキ ストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                        <p>テキストテキストテキストテキストテキストテキストテキストテキストテキストテ キストテキストテキストテキストテキストテキストテキストテキストテキストテキ ストテキストテキストテキストテキストテキストテキストテキストテキスト</p>
+                    </div>
+                    <form class="contact__form">
+                        <dl>
+                            <dt>
+                                <label for="name">Name:</label>
+                            </dt>
+                            <dd>
+                                <input type="text" id="name" autocomplete="off" />
+                            </dd>
+                            <dt>
+                                <label for="mail">Mail:</label>
+                            </dt>
+                            <dd>
+                                <input type="text" id="mail" autocomplete="off" />
+                            </dd>
+                            <dt>
+                                <label for="message">Message:</label>
+                            </dt>
+                            <dd>
+                                <textarea id="message" rows="2" autocomplete="off"></textarea>
+                            </dd>
+                        </dl>
+                        <button type="button">SEND</button>
+                    </form>
+                </div>
             </section>
         </main>
-        <!-- <footer style="height: 2000px; background-color: red;">aaa</footer> -->
+        <footer class="footer">
+            <p class="copy_right">© Sneakers</p>
+        </footer>
     </body>
 </html>
