さすがに動画変えとくべ...

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <main>
             <div id="main_video">
                 <video autoplay muted loop playsinline>
-                    <source src="video/Loom _ Free Screen & Video Recording Software _ Loom - 4 May 2024.mp4" type="video/mp4"/>
+                    <source src="video/video.mp4" type="video/mp4"/>
                 </video>
             </div>
             <section id="pickup" class="pickup">
